# infra

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo_new.toml  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION.md  LICENSE  NEXT_STEPS.md  QUICK_REFERENCE.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  install.ps1  install.sh  string_utils.infra
.github/workflows/: auto-release.yml  release-enhanced.yml  release.yml
docs/: ASYNC_AWAIT.md  EDITOR_SETUP.md  INSTALLATION.md  LANGUAGE_GUIDE.md  STANDARD_LIBRARY.md
editors/: setup-emacs.md  setup-neovim.md  setup-vscode.md
editors/grammars/: binding.gyp  grammar.js  package.json
editors/grammars/bindings/node/: index.js
editors/lsp-server/: Cargo.toml
editors/lsp-server/src/: lib.rs  main.rs
editors/vscode-extension/: language-configuration.json  package.json
editors/vscode-extension/src/: extension.ts
editors/vscode-extension/syntaxes/: infra.tmLanguage.json
infra-language-server/: infra-language-server-1.0.0.tgz  package-lock.json  package.json  tsconfig.json
infra-language-server/src/: server.ts
scripts/: auto-version.py
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
src/backend/: bytecode.rs  environment.rs  evaluator.rs  interpreter.rs  mod.rs  module_system.rs  tests.rs  vm.rs  vm_new.rs
src/cli/: mod.rs  repl.rs  runner.rs
src/core/: ast.rs  error.rs  mod.rs  value.rs
src/frontend/: lexer.rs  mod.rs  parser.rs  token.rs
src/stdlib/: array.rs  async_mod.rs  io.rs  math.rs  mod.rs  string.rs
src/utils/: error_reporter.rs  mod.rs  version.rs
tree-sitter-infra/: Cargo.toml  binding.gyp  grammar-v2.js  grammar-working.js  grammar.js  package-lock.json  package.json  tree-sitter-infra-1.0.0.tgz
tree-sitter-infra/bindings/node/: binding.cc  index.js
tree-sitter-infra/bindings/rust/: lib.rs
tree-sitter-infra/queries/: highlights.scm  injections.scm
tree-sitter-infra/src/: grammar.json  node-types.json  parser.c
tree-sitter-infra/test/corpus/: basic.txt
vsc-extension/: CHANGELOG.md  LICENSE  README.md  icon-placeholder.txt  language-configuration.json  package-lock.json  package.json
vsc-extension/snippets/: infra.json
vsc-extension/src/: extension.ts
vsc-extension/syntaxes/: infra.tmLanguage.json
wix/: License.rtf  main.wxs  theme.xml
