[package]
name = "infra"
version = "0.1.0"
edition = "2021"
description = "A simple, Python-like programming language built for performance and competitive programming"
authors = ["Md Ashiquzzaman Khan <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/infra-lang/infra"
keywords = ["programming-language", "interpreter", "competitive-programming"]
categories = ["compilers"]

[[bin]]
name = "infra"
path = "src/main.rs"

[dependencies]
